[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/character_select/profile_box/profile_box.gd" type="Script" id=1]
[ext_resource path="res://font/UI_s.tres" type="DynamicFont" id=2]
[ext_resource path="res://graphics/gui/character_select/plus.png" type="Texture" id=3]

[node name="Btn_Profile" type="Button"]
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 1 )

[node name="Lbl_Name" type="Label" parent="."]
margin_top = 280.0
margin_right = 300.0
margin_bottom = 347.0
custom_fonts/font = ExtResource( 2 )
text = "Create New"
align = 1

[node name="Spr_Plus" type="Sprite" parent="."]
position = Vector2( 150, 140 )
texture = ExtResource( 3 )
[connection signal="button_up" from="." to="." method="_on_Btn_Profile_button_up"]
